# social-sports-api

./: .gitignore  Cargo.toml  README.md  schema.sql
proto/: api.proto
src/: main.rs
src/api/: api.rs  mod.rs
src/common/: event.rs  event_publisher.rs  mod.rs  repository.rs
src/config/: configuration.rs  mod.rs
src/domain/: mod.rs
src/domain/account/aggregates/: mod.rs  user_id.rs
src/domain/club/: mod.rs
src/domain/club/aggregates/: club.rs  club_id.rs  club_name.rs  mod.rs
src/domain/club/commands/: commands.rs
src/domain/club/events/: events.rs  mod.rs
src/domain/club/policies/: club_policy.rs  mod.rs
src/domain/club/repositories/: club_repository.rs  mod.rs
src/domain/club/usecases/: error.rs  mod.rs  usecase.rs
src/domain/media/aggregates/: image_id.rs  mod.rs
src/domain/media/repositories/: image_repository.rs  mod.rs
src/domain/social/aggregates/: comment.rs  comment_id.rs  comment_text.rs  community.rs  community_id.rs  community_name.rs  feed.rs  mod.rs  post.rs  post_attachment.rs  post_id.rs  post_reaction.rs  post_text.rs
src/domain/social/commands/: comment.rs  community.rs  mod.rs  post.rs  post_reaction.rs
src/domain/social/events/: events.rs
src/domain/social/policies/: comment_policy.rs  community_policy.rs  feed_policy.rs  mod.rs  post_policy.rs  (+1 more)
src/domain/team/: mod.rs
src/infrastructure/postgres/: mod.rs  pg_club_repository.rs  pg_comment_repository.rs  pg_community_repository.rs  pg_event_repository.rs  pg_feed_repository.rs  pg_post_reaction_repository.rs  pg_post_repository.rs  pg_team_repository.rs
(+23 files in other folders)
