[package]
name = "social-sports-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "json" ] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"]}
serde_json = "1.0"
chumsky = "0.8.0"
friendly_id = "0.3.0"
itertools = "0.10"
futures-util = "0.3.24"
jwt = "0.16.0"

[build-dependencies]
tonic-build = "0.8"